# redis_queue

./: .env.example  .gitignore  Makefile  docker-compose.yml  main.py  pyproject.toml
app/configuration/: __init__.py
app/pkg/connectors/: __init__.py  base_connector.py  postgresql.py  redis.py
app/pkg/logger/: __init__.py  logger.py
app/pkg/models/: image.py
app/pkg/models/base/: __init__.py  enum.py  exception.py  model.py
app/pkg/models/exceptions/: repository.py
app/pkg/models/logger/: logger.py
app/pkg/settings/: settings.py
app/repository/: repository.py
app/repository/postgresql/: __init__.py  image.py
app/repository/postgresql/handlers/: __init__.py  collect_response.py
app/workers/: __init__.py  consumer.py  producer.py
docker/api/: Dockerfile
docker/migrations/: Dockerfile
migrations/: 20230602_01_dyakl-create-image-data-table.py
scripts/: migrate.py
